--- a/R_vs_Stata.Rmd
+++ b/R_vs_Stata.Rmd
@@ -123,7 +123,7 @@ class: center, middle
 
 * R is less specialized:
 --
-more flexibility and more functionalities.
+ more flexibility and more functionalities.
 
 --
 
@@ -135,11 +135,11 @@ more flexibility and more functionalities.
 
 
 ---
-### Advantages of Stata
+## Advantages of Stata
 
 - Stata is more specialized:
 --
-Some common but complex tasks are simpler
+ Some common but complex tasks are simpler
 
 --
 
@@ -243,13 +243,13 @@ Development of new specialized techniques and tools could happen faster (e.g. ie
 ---
 ## R vs Python
 
-- I Prefer R because it is designed for and by academics, not developers.
+- I Prefer R because it was/is designed for and by academics, noy by developers.
 
 --
 
 - If there is something that I need to do in Python, I just run Python from R, get the results, and keep working on R
 --
-(same thing with Stata). 
+ (same thing with Stata). 
 
 --
 
@@ -284,7 +284,7 @@ class: center, middle
 
 --
 
-- If R keeps getting more popularity than R, it will be more attractive in their CVs. 
+- If Python keeps getting more popularity than R, it will be more attractive in their CVs. 
 
 --
 
@@ -354,3 +354,9 @@ __R__ works in a completely different way:
 
 * Whenever you run anything you intend to use in the future, __you need to store it as an object__.
 
+
+---
+
+class: middle center
+
+## Question? 
