--- a/preliminary_notions.Rmd
+++ b/preliminary_notions.Rmd
@@ -118,11 +118,11 @@ class: middle
 
 --
 
-In R, you create objects, which you can bind to a named 'x'.
+In R, you create objects, which you can bind to a name 'x'.
 
 --
 
-.red[You do NOT create an object name 'x'.]
+.red[You do NOT create an object named 'x'.]
 
 --
 
@@ -143,7 +143,7 @@ knitr::include_graphics("https://github.com/hadley/adv-r/raw/master/diagrams/nam
 
 --
 
-- A syntactic name must consist of letters10, digits, . and _ but can’t begin with _ or a digit. 
+- A syntactic name must consist of letters, digits, . and \_ but can’t begin with \_ or a digit.
 
 --
 
@@ -151,11 +151,16 @@ knitr::include_graphics("https://github.com/hadley/adv-r/raw/master/diagrams/nam
 
 --
 
-- A name that doesn’t follow these rules is a **non-syntactic** name; if you try to use them, you’ll get an error
+- A name that doesn't follow these rules is a **non-syntactic** name; if you try to use them, you’ll get an error
 
 --
 
 - It's possible to override these rules and use any name, i.e., any sequence of characters, by surrounding it with backticks.
+
+```{r non-synt, echo=TRUE}
+`1+1` <- 2
+`1+1`
+```
 
 ---
 
@@ -174,6 +179,10 @@ Functions are instructions of what to DO with the data.
 ---
 ## Vectors
 
+A vector is a collection of elements.
+
+--
+
 There are two (well three) kind of vectors.
 
 ```{r, echo=FALSE, out.width=NULL}
@@ -187,7 +196,7 @@ knitr::include_graphics("https://github.com/hadley/adv-r/raw/master/diagrams/vec
 __lists__: elements can have different types.
 
 ---
-## Atomic vectors
+## Atomic vectors - `c()`
 .pull-left[
 Since atomic vectors require that all elements are of the same type, there are four types .light-blue[(six in reality, but you won't use the other two: raw and complex)]
 ]
@@ -211,7 +220,6 @@ x <- matrix(1:6, nrow = 2, ncol = 3)
 
 ]
 .pull-right[
-Exlore `typeof` and `class`
 ```{r echo=FALSE}
 knitr::include_app("https://rrmaximiliano.shinyapps.io/learnr-app/")
 ```
@@ -231,7 +239,7 @@ knitr::include_graphics("https://github.com/hadley/adv-r/raw/master/diagrams/vec
 ]
 
 ---
-## List vectors
+## List vectors - `list()`
 In lists, elements can be of any type.
 
 .pull-left[
@@ -261,9 +269,11 @@ str(l1)
 data frames are the kind of rectangular tables that you use in Stata
 .pull-left[
 ```{r dataframe}
-df1 <- data.frame(x = 1:3, 
-                  y = c("a", "b", "c")
-                  )
+df1 <- 
+  data.frame(
+    x = 1:3, 
+    y = c("a", "b", "c")
+    )
 
 typeof(df1)
 
@@ -297,6 +307,13 @@ library(data.table)
 # Bad code on purpose
 tb <- tibble::tibble(x = 1:3, y = letters[1:3])
 dt <- data.table::data.table(x = 1:3, y = letters[1:3])
+
+```
+
+---
+
+## Better data.frames! `tibble` and `data.table`
+```{r class-dt-tb}
 class(tb)
 class(dt)
 ```
@@ -306,15 +323,25 @@ class(dt)
 class: center, middle
 ## Hands on!
 ---
-We will use the [gapminder](https://www.gapminder.org/) data.
 
-To make it easier to work with, we will use `df` as the name of the data rather than `gapminder`
+I. What is the difference between `c(list(1:3), list(9)` and `list(list(1:3), list(9)`
 
-```{r, include=TRUE, results="hide"}
-# Load the data
-library("tidyverse") 
-library("data.table")
-library("gapminder")
-# Change name for convenience
-df <- gapminder
+II. Is there any difference between these three ways of assignment?
+
+```{r ex2}
+assign('a', c(10, 150, 30, 45, 20.3))
+a <- c(10, 150, 30, 45, 20.3)
+a = c(10, 150, 30, 45, 20.3)
 ```
+
+III. The `dim()` function gets the dimension of an object. Why `dim(a)` is `NULL`?
+
+IV. Why `is.character(c('blue',10,'green',20))` is `TRUE`?
+
+---
+
+R comes with a variety of datasets to work with (Similar to `sysuse auto` in Stata). You can see all the datasets available by typing `library(help = "datasets")`.  
+
+V. In a `tibble` bound to the name `tb` add a column named `x` with the vector `rivers` from the internal `datasets`.
+
+---
