--- a/_posts/r-vs-stata/r-vs-stata.Rmd
+++ b/_posts/r-vs-stata/r-vs-stata.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 
 ```{r embed-class01, echo=FALSE}
-xaringanExtra::embed_xaringan(url   = "slides/R_vs_Stata",
+xaringanExtra::embed_xaringan(url   = "slides/R_vs_Stata/",
                               ratio = "16:9")
 ```
 
