--- a/_posts/pipe/pipe.Rmd
+++ b/_posts/pipe/pipe.Rmd
@@ -37,12 +37,86 @@ Attaching has the advantage of not using `::`, but when you use too many package
 
 I attach when I am using a package that I need all the time. For example, `tidyverse` or `data.table`. However, try to always use `::` because the code is clearer and there is no penalty in speed (minimum).
 
-If you are developing packages, you canNOT attach package. You always have to use `::`
+```{r, eval=FALSE}
+flights |> 
+  dplyr::filter(dest == "IAH") |> 
+  dplyr::mutate(speed = distance / air_time * 60) |> 
+  dplyr::select(year:day, dep_time, carrier, flight, speed) |> 
+  dplyr::arrange(dplyr::desc(speed))
+
+
+flights |> 
+  filter(dest == "IAH") |> 
+  mutate(speed = distance / air_time * 60) |> 
+  select(year:day, dep_time, carrier, flight, speed) |> 
+  arrange(desc(speed))
+
+```
+
+If you are developing packages, you **cannot** attach packages. You always have to use `::`
 
 # Main idea of the pipe
 
 ```{r}
-# 
+# load libraries that we will need
+
+library(nycflights13) # data or use library(help = "datasets")
+library(tidyverse)
+library(data.table)
+
+```
+
+We need to talk first about frames. Let's go to Stata first.
+
+At the most basic level, the pipe is a syntax transformation in which you separate the argument from the function
+
+```{r}
+x = 1:10
+
+# from this
+mean(x)
+
+# to this 
+
+x |> mean()
+```
+
+But it by itself is not super useful. You see the real power when you work with dataframes
+
+```{r, eval=FALSE}
+# so you go from this
+flights1 <- filter(flights, dest == "IAH")
+flights2 <- mutate(flights1, speed = distance / air_time * 60)
+flights3 <- select(flights2, year:day, dep_time, carrier, flight, speed)
+arrange(flights3, desc(speed))
+
+
+# or this
+arrange(
+  select(
+    mutate(
+      filter(flights, dest == "IAH"),
+      speed = distance / air_time * 60
+    ),
+    year:day, dep_time, carrier, flight, speed
+  ),
+  desc(speed)
+)
+
+
+# to this
+
+
+```
+
+To this.
+
+```{r}
+flights |> 
+  filter(dest == "IAH") |> 
+  mutate(speed = distance / air_time * 60) |> 
+  select(year:day, dep_time, carrier, flight, speed) |> 
+  arrange(desc(speed))
 ```
 
 # sources
